windows-containers-get-started/deploy/win-aspnet-application-customer2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: aspnetapplication-customer2
  labels:
    app: aspnetapplication-customer2
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: aspnetapplication-customer2
  template:
    metadata:
      labels:
        app: aspnetapplication-customer2
    spec:
      containers:
        - name: aspnetapplication-customer2
          image: m009/aspnet-webapplication:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits: 
              memory: 500Mi
              cpu: 0.5
            requests:
              memory: 250Mi
              cpu: 0.2
      nodeSelector:
        beta.kubernetes.io/os: windows
