windows-containers-get-started/deploy/win-aspnetcore-echo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: win-aspnetcore-echo-api
  labels:
    app: win-aspnetcore-echo-api
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: win-aspnetcore-echo-api
  template:
    metadata:
      labels:
        app: win-aspnetcore-echo-api
    spec:
      containers:
        - name: win-aspnetcore-echo-api
          image: m009/win-aspnetcore-echo-api:01
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
      nodeSelector:
        beta.kubernetes.io/os: windows
