windows-containers-get-started/deploy/win-image-download-daemonset.yaml
apiVersion: apps/v1beta2
kind: DaemonSet
metadata:
  name: prepull
spec:
  selector:
    matchLabels:
      name: prepull 
  template:
    metadata:
      labels:
        name: prepull 
    spec:
      containers:
      - name: pause
        image: gcr.io/google_containers/pause
