windows-containers-get-started/deploy/win-aspnet-application-customer1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapplication-customer1
  labels:
    app: aspnetapplication-customer1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: aspnetapplication-customer1
