windows-containers-get-started/deploy/win-aspnet-application-customer2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aspnetapplication-customer2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: <CUSTOMER_DOMAIN>
    http:
      paths:
      - backend:
          serviceName: "aspnetapplication-customer2"
          servicePort: 80
