windows-containers-get-started/deploy/win-aspnetcore-echo-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: win-aspnetcore-echo-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: win-aspnetcore-echo-api
          servicePort: 80
        #path: /(.*)
